# gdg-wt-26

./: .gitignore  Cargo.toml  config.toml  docs.md  query_profile_10m.txt  repro_bench.sh  schema.toml
backend/: bench_queries.py  live.py  main.py  pyproject.toml  queries.py
backend/engines/: aqe.py  sqlite_engine.py
bench/: aqe_driver.py  bench.py  collect_diagnostics.py  compare_sqlite.py  diagnostics_results.txt  final_bench.py  final_bench_results.json  reprofile.py  results_10m.json  stress_10m.sh  stress_test.py
frontend/: README.md  package-lock.json  package.json
frontend/src/Layouts/: MainLayout.astro
frontend/src/pages/: index.astro
frontend/src/styles/: global.css
src/: config.rs  datagen.rs  errors.rs  lib.rs  main.rs  repl.rs  types.rs
src/aqp/: accuracy.rs  estimator.rs  mod.rs  tdigest.rs
src/aqp/sampler/: col_sampler.rs  mod.rs  reservoir.rs  row_sampler.rs  sst_sampler.rs
src/driver/: mod.rs
src/ingestion/: connection.rs
src/query/: ast.rs  mod.rs  parser.rs  planner.rs
src/query/executor/: aggregator.rs  aqp_pipeline.rs  col_pipeline.rs  mod.rs  pipeline.rs
src/storage/: bitmap.rs  csv_loader.rs  flush.rs  hll.rs  manager.rs  memtable.rs  mod.rs
src/storage/bloom/: filter.rs
src/storage/columnar/: mod.rs  reader.rs  segment.rs  writer.rs
src/storage/columnar/encoding/: delta.rs  mod.rs  rle.rs
src/storage/compaction/: engine.rs  lcs.rs  merger.rs  mod.rs  scheduler.rs  stcs.rs
src/storage/sstable/: columnar.rs  mod.rs  reader.rs  writer.rs
src/utils/: aligned_vec.rs
tools/: gen_data.py  ingest_csv.py
