[package]
name = "lsm"
version = "0.1.0"
edition = "2024"

[lib]
name = "lsm"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
bincode = "1.3"
bloomfilter = "1.0"
rayon = "1.10"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
rand = "0.8"
rand_chacha = "0.3"
rustyline = "12.0.0"
crc32fast = "1.3.2"
memmap2 = "0.9"
csv = "1.4.0"
bytemuck = { version = "1.24", features = ["derive"] }
